2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>

	* editfns.c (Fuser_full_name): Replace the only use of
	USER_FULL_NAME with its value.
	* config.in: Regenerate.

2008-07-16  David Reitter <david.reitter@gmail.com>

	* Makefile.in: add ns-win, ns-carbon-compat, easy-mmode and
	easy-menu to SOME_MACHINE_LISP for the new NeXTstep port

2008-07-16  Glenn Morris  <rgm@gnu.org>

	* emacs.c (system-type): Doc fix.

2008-07-15  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (parse_menu_item): Don't use cachelist, even under NS.
	If the cache doesn't work, let's fix it, rather than work around it.

2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	* Makefile.in: Correct additions for nsfont.o in last commit.
	* nsfont.m: New file (forgot last commit).

2008-07-15  Adrian Robert <Adrian.B.Robert@gmail.com>

	Changes and additions for NeXTstep windowing system (Cocoa and
	GNUstep) support.

	* Makefile.in
	* config.in: Support defines and build commands for NS port.
	* blockinput.h (BLOCK_INPUT, UNBLOCK_INPUT, TOTALLY_UNBLOCK_INPUT)
	(UNBLOCK_INPUT_TO): Don't use under NS unless EXPERIMENTAL_CONTROL_G.
	* callproc.c (set_initial_environment): Initialize
	Vprocess_environment under CANNOT_DUMP (fixes crash when
	batch-compiling for bootstrap, due to Chris Hall).
	* dispextern.h: Include nsgui.h and add needed typedefs under NS
	windowing.
	(struct face): Add synth_ital field.
	* dispnew.c: Include nsterm.h when compiling under NS windowing.
	(init_display): Initialize Vinitial_window_system to "ns" when so
	compiled.
	* emacs.c: Include GSConfig.h when compiling under GNUstep.
	(display_arg): Use under NS.
	(main): Under NS, allocate autorelease pool and handle command line
	args.  Move syms_of_xmenu() call under #ifdef HAVE_X_WINDOWS.
	(standard_args): Add NS-specific args.
	(shut_down_emacs): Shut down NS terminal if compiled under NS.
	* font.c (DEFAULT_ENCODING): New variable.
	(font_find_for_lface): Use it.
	(syms_of_font): Load syms_of_nsfont under NS.