@@ -23,8 +23,7 @@ along with GNU Emacs.  If not, see <http://www.gnu.org/licenses/>.  */
    USUAL-OPSYS="note"
 
 NOTE-START
-Use mips4.h for RISCOS version 4; use s-bsd4-3.h with the BSD world.
-Note that the proper m file for the Decstation is pmax.h.
+This is only used on GNU/Linux.
 NOTE-END  */
 
 /* Define WORDS_BIG_ENDIAN if lowest-numbered byte in a word
@@ -39,15 +38,8 @@ NOTE-END  */
 
 #define NO_ARG_ARRAY
 
-/* Define how to take a char and sign-extend into an int.
-   On machines where char is signed, this is a no-op.  */
-
-#define SIGN_EXTEND_CHAR(c) ((signed char)(c))
-
 /* Now define a symbol for the cpu type, if your compiler
-   does not define it automatically:
-   Ones defined so far include vax, m68000, ns16000, pyramid,
-   orion, tahoe, APOLLO and many others */
+   does not define it automatically.  */
 #ifndef mips
 #	define mips
 #endif
@@ -68,28 +60,6 @@ NOTE-END  */
 
 #define LOAD_AVE_CVT(x) (int) (((double) (x)) * 100.0 / 256.0)
 
-/* CDC EP/IX 1.4.3 uses /unix */
-
-#ifndef __linux__
-#undef KERNEL_FILE
-#define KERNEL_FILE "/unix"
-#endif /* not __linux__ */
-
-/* Define CANNOT_DUMP on machines where unexec does not work.
-   Then the function dump-emacs will not be defined
-   and temacs will do (load "loadup") automatically unless told otherwise.  */
-
-#undef CANNOT_DUMP
-
-/* Define VIRT_ADDR_VARIES if the virtual addresses of
-   pure and impure space as loaded can vary, and even their
-   relative order cannot be relied on.
-
-   Otherwise Emacs assumes that text space precedes data space,
-   numerically.  */
-
-/* #define VIRT_ADDR_VARIES */
-
 /* Define NO_REMAP if memory segmentation makes it not work well
    to change the boundary between the text section and data section
    when Emacs is dumped.  If you define this, the preloaded Lisp
@@ -97,59 +67,12 @@ NOTE-END  */
 
 #define NO_REMAP
 
-/* This machine requires completely different unexec code
-   which lives in a separate file.  Specify the file name.  */
-
-#if !defined(__linux__) && !defined(__NetBSD__)
-#undef UNEXEC
-#define UNEXEC unexmips.o
-#endif /* not __linux__ && not __NetBSD__ */
-
 /* Describe layout of the address space in an executing process.  */
 
-#ifdef __linux__
 #define TEXT_START      0x00400000
 #define DATA_START      0x10000000
 #define DATA_SEG_BITS	0x10000000
-#else /* not __linux__ */
-#define TEXT_START 0x400000
-#define DATA_START 0x800000
-#endif /* __linux__ */
 
-/* Alter some of the options used when linking.  */
-
-#if !defined(__linux__)
-#ifdef BSD_SYSTEM
-
-/* DECstations don't have this library.
-   #define LIBS_MACHINE -lmld  */
-
-#define LD_SWITCH_MACHINE -D 800000
-#define LIBS_DEBUG
-
-#if defined (__NetBSD__) || defined (__OpenBSD__)
-#else  /* bsd with elf */
-#define LINKER /bsd43/bin/ld
-
-#define LD_SWITCH_MACHINE -D 800000 -g3
-#define START_FILES pre-crt0.o /usr/lib/crt1.o
-#define LIB_STANDARD -lbsd -lc /usr/lib/crtn.o
-#define LIBS_TERMCAP -lcurses
-
-#define C_SWITCH_MACHINE -I/usr/include/bsd
-#define C_DEBUG_SWITCH -O -g3
-
-#endif /* bsd with elf */
-#else /* not BSD_SYSTEM */
-
-#if defined(__GNUC__) && defined(_ABIN32)
-#define LIBS_MACHINE
-#else
-#define LIBS_MACHINE -lmld
-#endif
-
-#endif /* not BSD_SYSTEM */
-#endif /* not __linux__ */
 
 /* The standard definitions of these macros would work ok,
    but these are faster because the constants are short.  */
@@ -160,47 +83,6 @@ NOTE-END  */
   ((var) =								\
    ((int)(type) << VALBITS)						\
    + (((unsigned) (ptr) << (BITS_PER_INT-VALBITS)) >> (BITS_PER_INT-VALBITS)))
-
-#if !defined (__linux__)
-#ifdef USG
-
-/* Cancel certain parts of standard sysV support.  */
-#undef NONSYSTEM_DIR_LIBRARY
-#define SYSV_SYSTEM_DIR
-#undef static
-
-/* Don't try to use SIGIO or FIONREAD even though they are defined.  */
-#define BROKEN_SIGIO
-#define BROKEN_FIONREAD
-
-/* Describe special kernel features.  */
-
-#define HAVE_SYSVIPC
-
-#if defined(emacs)
-#include <bsd/sys/time.h>
-#endif
-
-/* The `select' in the system won't work for pipes, so don't use it.  */
-#undef HAVE_SELECT /* override configuration decision */
-
-#define HAVE_PTYS
-#define HAVE_SOCKETS
-
-#undef NOMULTIPLEJOBS
-
-/* ??? */
-#define IRIS
-
-#endif /* USG */
-
-#ifdef BSD_SYSTEM
-#define COFF
-#define TERMINFO
-#undef MAIL_USE_FLOCK  /* Someone should check this.  */
-#endif /* BSD_SYSTEM */
-
-#endif /* not __linux__ */
 
 /* arch-tag: 8fd020ee-78a7-4d87-96ce-6129f52f7bee
    (do not change this comment) */
